# barnacle

./: .gitignore  Cargo.toml  Dockerfile  README.md  cloudbuild.yaml  docker-compose.yml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: config.yml
.github/scripts/: audit.sh
.github/workflows/: build-push-template.yml  octopus-audit-auto.yml  test-cross-chain-transfer.yml
bench/: Cargo.toml
cli/: Cargo.toml
cli/res/: barnacle-readable.json  chainspec-orig.json  octopus-testnet.json
cli/src/: benchmarking.rs  chain_spec.rs  cli.rs  command.rs  service.rs
cli/tests/: common.rs
docs/example/: .gitignore  README.md  hardhat.config.js  package-lock.json  package.json
docs/example/.maintain/: deployment.js  print-address.js  store-deployment.js
docs/example/contracts/: Escrow.sol  MockErc20Token.sol  StringStore.sol
docs/example/deployed-addresses/: barnacle-erc20  barnacle-escrow  barnacle-string-store  hardhat-escrow
executor/: Cargo.toml
executor/src/: lib.rs
executor/tests/: basic.rs  common.rs  fees.rs  submit_transaction.rs
inspect/: Cargo.toml
inspect/src/: lib.rs
node/: Cargo.toml
node/src/: benchmarking.rs  chain_spec.rs  cli.rs  command.rs  rpc.rs  service.rs
pallets/balances/: Cargo.toml
pallets/balances/src/: lib.rs  weights.rs
pallets/erc20/: Cargo.toml
pallets/erc20/src/: lib.rs  mock.rs
pallets/evm-permission/: Cargo.toml
pallets/evm-permission/src/: lib.rs  mock.rs  tests.rs
pallets/nexus/: Cargo.toml
pallets/nexus/src/: lib.rs
pallets/support/: Cargo.toml
pallets/support/src/: lib.rs
pallets/template/: Cargo.toml
precompiles/assets-erc20/: Cargo.toml  ERC20_local.sol
precompiles/assets-erc20/src/: eip2612.rs  lib.rs  mock.rs  tests.rs
precompiles/balances-erc20/: Cargo.toml  ERC20.sol
precompiles/balances-erc20/src/: eip2612.rs  lib.rs  mock.rs  tests.rs
precompiles/octopus-appchain/: Cargo.toml  OctopusAppchainInterface.sol
precompiles/octopus-appchain/src/: lib.rs  mock.rs  tests.rs
precompiles/octopus-bridge/: Cargo.toml  OctopusBridgeInterface.sol
precompiles/octopus-bridge/src/: lib.rs  mock.rs  tests.rs
precompiles/octopus-session/: Cargo.toml  OctopusSessionInterface.sol
precompiles/octopus-session/src/: lib.rs  mock.rs  tests.rs
precompiles/octopus-uniques/: Cargo.toml  OctopusUniquesInterface.sol
precompiles/octopus-uniques/src/: impls.rs  lib.rs  mock.rs  tests.rs
precompiles/solidity/: README.md  hardhat.config.js  package-lock.json  package.json
precompiles/solidity/contracts/: ERC721App.sol  ERC721Vault.sol  OctopusBridgeInterface.sol  OctopusUniquesInterface.sol
precompiles/utils/: Cargo.toml
precompiles/utils/macro/: Cargo.toml
precompiles/utils/src/: lib.rs  testing.rs
precompiles/utils/src/data/: mod.rs
primitives/: Cargo.toml
primitives/account/: Cargo.toml
primitives/account/src/: lib.rs
primitives/src/: lib.rs
resources/: barnacle-readable.json  barnacle.json  chainspec-orig.json  chainspec-snippet.json  octopus-testnet.json  testnet.json
rpc/: Cargo.toml
rpc/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: constants.rs  lib.rs  precompiles.rs
scripts/: anchor_go_live.sh  check_connection.sh  config_anchor.sh  config_assets_anchor.sh  copy_credentials.sh  deploy_anchor.sh  deploy_init_wrapped_token.sh  reset_anchor.sh  start_alice.sh  start_bob.sh
testing/: Cargo.toml
ts-tests/: .gitignore  activateAppchain.ts  package.json  tsconfig.json
ts-tests/tests/: test-bridge.ts  util.ts
