[profile.release]
panic = 'unwind'

[workspace]
members = [
    'node',
    'pallets/template',
    'runtime',
]

# patch beefy
[patch."https://github.com/paritytech/substrate"]
frame-support = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
frame-system = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
pallet-session = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sc-client-api = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sc-keystore = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sc-network = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sc-network-gossip = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sc-rpc = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-api = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-application-crypto = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-arithmetic = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-blockchain = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-consensus = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-core = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-io = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-keystore = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-runtime = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-staking = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-std = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-trie = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-utils = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
substrate-prometheus-endpoint = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }

sp-tasks = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
frame-benchmarking-cli = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
frame-benchmarking = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
frame-executive = {  git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
frame-system-benchmarking = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
frame-system-rpc-runtime-api = {  git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
pallet-babe = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
pallet-balances = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
pallet-grandpa = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
pallet-randomness-collective-flip = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
pallet-sudo = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
pallet-timestamp = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
pallet-transaction-payment = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
pallet-transaction-payment-rpc-runtime-api = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
pallet-transaction-payment-rpc = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sc-basic-authorship = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sc-cli = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sc-consensus-babe = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sc-consensus = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sc-executor = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sc-finality-grandpa = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sc-rpc-api = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sc-service = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sc-telemetry = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sc-transaction-pool = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-block-builder = {  git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-consensus-babe = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-finality-grandpa = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-inherents = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-offchain = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-session = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-transaction-pool = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-version = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
substrate-build-script-utils = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
substrate-frame-rpc-system = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
substrate-wasm-builder={ git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }

pallet-assets = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
pallet-authorship = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
pallet-im-online = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
pallet-mmr = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
pallet-staking = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
pallet-staking-reward-curve = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
frame-election-provider-support = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }

sc-chain-spec = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sc-consensus-babe-rpc = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sc-consensus-epochs = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sc-consensus-slots = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sc-consensus-uncles = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sc-finality-grandpa-rpc = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sc-sync-state-rpc = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-authorship = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-timestamp = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
pallet-mmr-rpc = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-state-machine = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }

[patch.crates-io]
frame-benchmarking-cli = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
frame-benchmarking = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
frame-executive = {  git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
frame-support = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
frame-system-benchmarking = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
frame-system = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
frame-system-rpc-runtime-api = {  git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
pallet-babe = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
pallet-balances = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
pallet-grandpa = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
pallet-randomness-collective-flip = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
pallet-sudo = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
pallet-timestamp = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
pallet-transaction-payment = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
pallet-transaction-payment-rpc-runtime-api = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
pallet-transaction-payment-rpc = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sc-basic-authorship = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sc-client-api = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sc-cli = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sc-consensus-babe = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sc-consensus = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sc-executor = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sc-finality-grandpa = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sc-keystore = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sc-rpc-api = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sc-rpc = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sc-service = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sc-telemetry = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sc-transaction-pool = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-api = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-block-builder = {  git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-blockchain = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-consensus-babe = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-consensus = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-core = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-finality-grandpa = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-inherents = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-io = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-offchain = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-runtime = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5'}
sp-session = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-std = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-transaction-pool = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-version = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
substrate-build-script-utils = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
substrate-frame-rpc-system = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
substrate-wasm-builder={ git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }

sp-staking = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
pallet-assets = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
pallet-authorship = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
pallet-im-online = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
pallet-mmr = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
pallet-staking = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
pallet-staking-reward-curve = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
frame-election-provider-support = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }

sc-chain-spec = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sc-consensus-babe-rpc = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sc-consensus-epochs = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sc-consensus-slots = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sc-consensus-uncles = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sc-finality-grandpa-rpc = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sc-sync-state-rpc = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-authorship = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-timestamp = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
pallet-mmr-rpc = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-state-machine = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
pallet-session = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-trie = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
