[workspace]
members = [
    'node',
    'pallets/template',
    'runtime',
]
[profile.release]
panic = 'unwind'

[patch."https://github.com/paritytech/substrate"]
frame-support = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
frame-system = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-session = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-client-api = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-keystore = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-network = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-network-gossip = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-rpc = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-api = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-application-crypto = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-arithmetic = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-blockchain = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-consensus = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-core = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-io = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-keystore = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-runtime = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-staking = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-std = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-trie = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-utils = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
substrate-prometheus-endpoint = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
frame-benchmarking = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
frame-benchmarking-cli = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-assets = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-balances = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-im-online = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-transaction-payment-rpc = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-basic-authorship = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-chain-spec = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-cli = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-consensus-babe-rpc = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-consensus-epochs = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-consensus-slots = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-consensus-uncles = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-finality-grandpa-rpc = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-sync-state-rpc = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-authorship = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-timestamp = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-mmr-rpc = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-state-machine = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-consensus = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-consensus-babe = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-executor = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-finality-grandpa = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-rpc-api = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-service = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-telemetry = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-transaction-pool = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-block-builder = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-consensus-babe = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-finality-grandpa = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-inherents = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
substrate-frame-rpc-system = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
frame-election-provider-support = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
frame-executive = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
frame-system-benchmarking = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
frame-system-rpc-runtime-api = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-authorship = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-babe = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-grandpa = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-mmr = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-randomness-collective-flip = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-sudo = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-timestamp = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-transaction-payment = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-offchain = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-session = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-transaction-pool = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-version = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
substrate-wasm-builder = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
substrate-build-script-utils = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }

[patch.crates-io]
frame-support = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
frame-system = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-session = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-client-api = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-keystore = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-network = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-network-gossip = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-rpc = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-api = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-application-crypto = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-arithmetic = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-blockchain = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-consensus = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-core = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-io = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-keystore = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-runtime = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-staking = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-std = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-trie = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-utils = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
substrate-prometheus-endpoint = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
frame-benchmarking = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
frame-benchmarking-cli = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-assets = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-balances = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-im-online = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-transaction-payment-rpc = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-basic-authorship = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-chain-spec = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-cli = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-consensus-babe-rpc = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-consensus-epochs = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-consensus-slots = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-consensus-uncles = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-finality-grandpa-rpc = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-sync-state-rpc = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-authorship = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-timestamp = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-mmr-rpc = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-state-machine = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-consensus = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-consensus-babe = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-executor = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-finality-grandpa = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-rpc-api = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-service = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-telemetry = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sc-transaction-pool = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-block-builder = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-consensus-babe = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-finality-grandpa = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-inherents = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
substrate-frame-rpc-system = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
frame-election-provider-support = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
frame-executive = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
frame-system-benchmarking = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
frame-system-rpc-runtime-api = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-authorship = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-babe = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-grandpa = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-mmr = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-randomness-collective-flip = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-sudo = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-timestamp = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-transaction-payment = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-offchain = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-session = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-transaction-pool = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-version = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
substrate-wasm-builder = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
substrate-build-script-utils = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }