[workspace]
members = [
    "node",
    "pallets/template",
    "runtime",
]
[profile.release]
panic = "unwind"

[patch."https://github.com/paritytech/substrate"]
substrate-wasm-builder = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
frame-benchmarking = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
frame-system-benchmarking = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
frame-executive = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
frame-support = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
frame-system = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
frame-system-rpc-runtime-api = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
pallet-babe = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
pallet-balances = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
pallet-grandpa = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
pallet-sudo = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
pallet-timestamp = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
pallet-transaction-payment = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
sp-api = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
sp-block-builder = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
sp-consensus-babe = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
sp-core = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
sp-inherents = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
sp-offchain = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
sp-runtime = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
sp-session = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
sp-std = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
sp-transaction-pool = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
sp-version = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
beefy-primitives = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
pallet-assets = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
pallet-authorship = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
pallet-beefy = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
pallet-beefy-mmr = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
pallet-im-online = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
pallet-mmr = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
pallet-mmr-primitives = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
pallet-session = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
pallet-uniques = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
sp-staking = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
sp-core-hashing = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
sp-core-hashing-proc-macro = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
sp-storage = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
sp-wasm-interface = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
sp-tracing = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
fork-tree = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
sp-externalities = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
sp-arithmetic = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
sp-runtime-interface = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
sp-database = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
sp-trie = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
sp-keystore = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
sc-allocator = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
sp-rpc = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
sc-executor-common = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
sp-state-machine = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
sc-peerset = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
sc-telemetry = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
sc-executor-wasmtime = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
sc-executor-wasmi = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
sp-io = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
sp-tasks = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
sp-application-crypto = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
sc-keystore = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
sp-consensus-slots = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
sp-consensus-vrf = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
sp-keyring = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
sc-executor = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
sp-finality-grandpa = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
sp-consensus = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
sp-timestamp = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
sp-transaction-storage-proof = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
sp-authorship = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
sp-blockchain = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
sc-transaction-pool-api = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
sc-client-api = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
sc-consensus = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
sc-block-builder = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
sc-tracing = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
sc-state-db = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
sc-transaction-pool = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
sc-consensus-uncles = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
sc-basic-authorship = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
sc-client-db = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
sc-network = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
sc-consensus-epochs = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
sc-consensus-slots = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
pallet-mmr-rpc = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
pallet-transaction-payment-rpc = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
sc-chain-spec = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
sc-network-gossip = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
sc-informant = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
sc-offchain = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
sc-consensus-babe = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
sc-finality-grandpa = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
beefy-gadget = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
sc-rpc-api = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
sc-service = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
beefy-gadget-rpc = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
sc-finality-grandpa-rpc = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
sp-panic-handler = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
sc-utils = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
sc-consensus-babe-rpc = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
sc-rpc = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
sc-sync-state-rpc = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
substrate-frame-rpc-system = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
frame-benchmarking-cli = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
sc-cli = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
substrate-build-script-utils = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
substrate-prometheus-endpoint = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.18" }
